--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,29 @@
   "name": "chatbot-backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index_v2.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs-converter": "^3.6.0",
+    "@tensorflow/tfjs-core": "^3.6.0",
+    "@tensorflow/tfjs-node": "^4.10.0",
+    "@xenova/transformers": "^2.13.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "hnswlib-node": "^1.4.2",
+    "langchain": "^0.0.213",
     "nodemon": "^3.0.2",
     "ollama": "^0.3.0",
-    "ollama-node": "^0.1.27"
+    "ollama-node": "^0.1.27",
+    "pdf-parse": "^1.1.1"
   }
 }
