--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.0.20",
+    "@langchain/openai": "^0.0.12",
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs-converter": "^3.6.0",
     "@tensorflow/tfjs-core": "^3.6.0",
@@ -21,7 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "hnswlib-node": "^1.4.2",
-    "langchain": "^0.0.213",
+    "langchain": "^0.1.5",
     "nodemon": "^3.0.2",
     "ollama": "^0.3.0",
     "ollama-node": "^0.1.27",
