--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index_v2.js"
+    "start": "nodemon --ext js index.js",
+    "dev": "nodemon --ext js index_v2.js"
   },
   "keywords": [],
   "author": "",
